2022-01-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_type_append_to): Avoid redundant comma in
	function type strings.

2022-01-25  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* libpoke/ios-dev-file.c (ios_dev_file_open): Do not create files
	if no flags are specified.

2022-01-25  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (What not to use in Jitter instructions): New
	section.

2022-01-25  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.pk (Pk_Table): New field max_column_size;
	* poke/pk-cmd-def.c (pk_cmd_info_type): Call exception handler for
	pk_compile_statement.
	* libpoke/pkl-rt.pk: New fields `nfields' and `ftypes'.
	Rename `fields' to `fnames'.
	* libpoke/pkl-gen.pks (struct_typifier): Adapt accordingly.
	* testsuite/poke.pkl/typeof-struct-1.pk: Update test.
	* testsuite/poke.pkl/typeof-struct-2.pk: Likewise.
	* testsuite/poke.pkl/typeof-struct-3.pk: Likewise.
	* testsuite/poke.pkl/typeof-structs-4.pk: Likewise.
	* testsuite/poke.pkl/typeof-struct-1.pk: Update test.
	* testsuite/poke.pkl/typeof-struct-2.pk: Likewise.
	* testsuite/poke.pkl/typeof-struct-3.pk: Likewise.
	* testsuite/poke.pkl/typeof-structs-4.pk: Likewise.

2022-01-25  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_type_append_to): Print `union' for
	unions, and not `struct'.

2022-01-25  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec): Likewise.
	* poke/pk-cmd-def.c (pk_cmd_info_type): Likewise.
	* poke/pk-cmd-ios.c (pk_cmd_load_file): Likewise.
	* poke/pk-cmd-vm.c (pk_cmd_vm_disas_fun): Likewise.

	* poke/poke.h: Prototype for poke_handle_exception.
	* poke/poke.c (poke_handle_exception): New function.
	(parse_args_2): Use poke_handle_exception.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (print_type_decl): Honour HAVE_HSERVER.

2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd-set.c (pk_cmd_set): Use `PRId64` instead of `ld`.
